--- a/streetMeet/www/index.html
+++ b/streetMeet/www/index.html
@@ -9,6 +9,7 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/styles2.css" rel="stylesheet">
+    <link rel="stylesheet" href="lib/alertifyjs/css/alertify.css" />
     <link href='http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic|Maven+Pro:400,700,500' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -40,6 +41,9 @@
 
     <!-- momentjs script -->
     <script src="lib/moment/moment.js"></script>
+
+    <!-- alertifyjs script -->
+    <script src="lib/alertifyjs/js/alertify.min.js"></script>
 
     <!-- ngCordova -->
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
